# gcg_rs

./: Cargo.toml  build.rs  full_plot_one.py  g.sh  plot_calculations.py  plotter.py  readme.md  readme.txt  renamer.py  setenv.sh
examples/: create_dataset.rs  denoise.rs  direct.rs  direct_custom.rs  direct_load_k_w.rs  gauss_par.rs  gauss_par2.rs  gauss_par2_complex.rs  gen_data.rs  inverse_from_uvych.rs  inverse_from_uvych2.rs  load_reduced_uvych.rs  make_calculations.rs  reduce_avg_binary.rs  reduce_binary.rs  reduce_xls.rs
models/: model_11.pt  model_12.pt  traced_model_11.pt  traced_model_9.pt
src/: common.rs  consts.rs  direct_problem.rs  initial.rs  inverse_problem.rs  lib.rs  linalg.rs  main.rs  matrix_system.rs  memory.rs  neuro.rs  solvers.rs  stream.rs  tasks.rs  vych.rs
