[package]
name = "gcg_nrs"
version = "0.1.0"
edition = "2021"


[lib]
name = "gcg2d"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.1", features = ["serde"] }
rayon = "1.8.0"
tch = "0.14.0"
anyhow = "1.0.78"
pbr = "1.1.1"
rand="0.8.5"
byteorder = "1.5.0"
itertools = "0.12.0"
clap = { version = "4.4.18", features = ["derive"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
